--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta content="If it involves money, it involves Eversend. From cross-border transfers to crypto and investments, Eversend gives you efficiency and peace of mind in spending and managing your money. Open your free account right away." name="description"
+    />
+    <meta content="business, payments, eversend, africa, neobank, digital bank, growth, us" name="keywords" />
+   
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Eversend: meeting all your money needs</title>
     <link
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
